hphp/hack/test/typecheck/poly_method_explicit_type_arguments_error.php.like_types.exp
File "poly_method_explicit_type_arguments_error.php", line 24, characters 5-54:
Invalid argument (Typing[4110])
File "poly_method_explicit_type_arguments_error.php", line 14, characters 5-22:
Expected ~(function(string): string) because it is an unenforceable type
File "poly_method_explicit_type_arguments_error.php", line 24, characters 5-54:
But got (function(int $x): string)
